[project]
name = "servervpnapi"
version = "0.1.0"
description = ""
authors = [
    {name = "bupyc",email = "notbupyc@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.120.4,<0.121.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "pytz (>=2025.2,<2026.0)",
]
package-mode = "False"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
